--- a/PAGES/1b_basics/index.html
+++ b/PAGES/1b_basics/index.html
@@ -2713,7 +2713,7 @@ joinpath&#40;&quot;/&quot;, &quot;user&quot;, &quot;julia&quot;&#41;</code></pre
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 25, 2024 
+          © Martin Alfaro <br>Last Modified June 26, 2024 
       </span> 
   </div> 
 </footer>
@@ -3243,6 +3243,10 @@ for multiple pics in a row
 
     .hand-cursor {
         cursor: wait;
+    }
+
+    h2:hover {
+        color: rgba(0,0,0, 0.5);
     }
 </style>    
 
