--- a/PAGES/2b_scalars/index.html
+++ b/PAGES/2b_scalars/index.html
@@ -2729,7 +2729,7 @@ z &#61; x &gt; y         # alternative notation &#40;potentially confusing, note
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 25, 2024 
+          © Martin Alfaro <br>Last Modified June 26, 2024 
       </span> 
   </div> 
 </footer>
@@ -3259,6 +3259,10 @@ for multiple pics in a row
 
     .hand-cursor {
         cursor: wait;
+    }
+
+    h2:hover {
+        color: rgba(0,0,0, 0.5);
     }
 </style>    
 
