--- a/PAGES/3d_vectorizing/index.html
+++ b/PAGES/3d_vectorizing/index.html
@@ -3130,8 +3130,8 @@ list &#61; &#91;1, 2, 3&#93;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Currying and Fixing Arguments (<strong><i>OPTIONAL</i></strong>)</h2></p>
-<p><span style="color: rgb(62, 121, 180);"><strong>Currying</strong></span> is a technique that transforms the evaluation of a function with multiple arguments, turning it into the evaluation of a sequence of functions, each with a single argument. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The name comes from the mathematician Haskell Curry, not the spice.  </span></span> For instance, the curried version of <code>f&#40;x,y&#41;</code> provides an identical result and is written <code>f&#40;x&#41;&#40;y&#41;</code>.</p>
-<p>Our interest in currying lies in its ability to simplify broadcasting: it enables the treatment of an argument as a single object, without the need to use vectors/tuples or <code>Ref</code>. The technique could seem confusing for new users. In particular, it requires a good understanding of functions as first-class objects, entailing that functions can be treated as variables themselves. My primary goal is that you can at least recognize the syntax of currying, and thus be able to read code that applies the technique.</p>
+<p><span style="color: rgb(62, 121, 180);"><strong>Currying</strong></span> is a technique that transforms the evaluation of a function with multiple arguments into the evaluation of a sequence of functions, each with a single argument. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The name comes from the mathematician Haskell Curry, not the spice.  </span></span> For instance, a curried version of <code>f&#40;x,y&#41;</code> can be written <code>f&#40;x&#41;&#40;y&#41;</code> and would provide an identical output.</p>
+<p>Our interest in currying lies in its ability to simplify broadcasting: it enables the treatment of an argument as a single object, without the need to use <code>Ref</code> or encapsulate objects as vectors/tuples. The technique could seem confusing for new users. In particular, it requires a good understanding of functions as first-class objects, entailing that functions can be treated as variables themselves. My primary goal is that you can at least recognize the syntax of currying, and thus be able to read code that applies the technique.</p>
 <p>We start by illustrating how currying can be applied in general.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -3265,7 +3265,7 @@ list &#61; &#91;1, 2, 3&#93;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 25, 2024 
+          © Martin Alfaro <br>Last Modified June 26, 2024 
       </span> 
   </div> 
 </footer>
@@ -3795,6 +3795,10 @@ for multiple pics in a row
 
     .hand-cursor {
         cursor: wait;
+    }
+
+    h2:hover {
+        color: rgba(0,0,0, 0.5);
     }
 </style>    
 
