--- a/PAGES/5g_inplace/index.html
+++ b/PAGES/5g_inplace/index.html
@@ -2810,7 +2810,7 @@ map&#33;&#40;a -&gt; a^2, output, x&#41;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 25, 2024 
+          © Martin Alfaro <br>Last Modified June 26, 2024 
       </span> 
   </div> 
 </footer>
@@ -3340,6 +3340,10 @@ for multiple pics in a row
 
     .hand-cursor {
         cursor: wait;
+    }
+
+    h2:hover {
+        color: rgba(0,0,0, 0.5);
     }
 </style>    
 
