--- a/PAGES/6d_application01/index.html
+++ b/PAGES/6d_application01/index.html
@@ -3001,7 +3001,7 @@ stats_visits     &#61; NamedTuple&#40;vector_of_tuples&#41;</code></pre> </div> 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 25, 2024 
+          © Martin Alfaro <br>Last Modified June 26, 2024 
       </span> 
   </div> 
 </footer>
@@ -3531,6 +3531,10 @@ for multiple pics in a row
 
     .hand-cursor {
         cursor: wait;
+    }
+
+    h2:hover {
+        color: rgba(0,0,0, 0.5);
     }
 </style>    
 
