--- a/PAGES/9f_lazy/index.html
+++ b/PAGES/9f_lazy/index.html
@@ -2546,9 +2546,6 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
- <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     The scripts of this section are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/9f_lazy/codeDownload"><strong>here</strong></a> under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.10.0.  </div>  </div>
 <section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
@@ -2736,7 +2733,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 25, 2024 
+          © Martin Alfaro <br>Last Modified June 26, 2024 
       </span> 
   </div> 
 </footer>
@@ -3266,6 +3263,10 @@ for multiple pics in a row
 
     .hand-cursor {
         cursor: wait;
+    }
+
+    h2:hover {
+        color: rgba(0,0,0, 0.5);
     }
 </style>    
 
