--- a/PAGES/2c_strings/index.html
+++ b/PAGES/2c_strings/index.html
@@ -2687,7 +2687,7 @@ x &#61; &quot;Last year, Messi scored &#36;&#40;number_matches * goals_per_match
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 25, 2024 
+          © Martin Alfaro <br>Last Modified June 26, 2024 
       </span> 
   </div> 
 </footer>
@@ -3217,6 +3217,10 @@ for multiple pics in a row
 
     .hand-cursor {
         cursor: wait;
+    }
+
+    h2:hover {
+        color: rgba(0,0,0, 0.5);
     }
 </style>    
 
