--- a/PAGES/2e_tuples/index.html
+++ b/PAGES/2e_tuples/index.html
@@ -2674,7 +2674,7 @@ x &#61;  4,5,6           #alternative notation</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 25, 2024 
+          © Martin Alfaro <br>Last Modified June 26, 2024 
       </span> 
   </div> 
 </footer>
@@ -3204,6 +3204,10 @@ for multiple pics in a row
 
     .hand-cursor {
         cursor: wait;
+    }
+
+    h2:hover {
+        color: rgba(0,0,0, 0.5);
     }
 </style>    
 
