--- a/PAGES/5a_immutables/index.html
+++ b/PAGES/5a_immutables/index.html
@@ -2689,7 +2689,7 @@ pop&#33;&#40;x&#41;                 # error, just like push&#33;&#40;x, &lt;some
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 25, 2024 
+          © Martin Alfaro <br>Last Modified June 26, 2024 
       </span> 
   </div> 
 </footer>
@@ -3219,6 +3219,10 @@ for multiple pics in a row
 
     .hand-cursor {
         cursor: wait;
+    }
+
+    h2:hover {
+        color: rgba(0,0,0, 0.5);
     }
 </style>    
 
