--- a/PAGES/6c_useful_funs/index.html
+++ b/PAGES/6c_useful_funs/index.html
@@ -3136,7 +3136,7 @@ z &#61; max&#40;x,y&#41;</code></pre> </div> </div> <div class="output_in_modal"
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 25, 2024 
+          © Martin Alfaro <br>Last Modified June 26, 2024 
       </span> 
   </div> 
 </footer>
@@ -3666,6 +3666,10 @@ for multiple pics in a row
 
     .hand-cursor {
         cursor: wait;
+    }
+
+    h2:hover {
+        color: rgba(0,0,0, 0.5);
     }
 </style>    
 
