--- a/PAGES/8c_TS-globalVariables/index.html
+++ b/PAGES/8c_TS-globalVariables/index.html
@@ -2811,7 +2811,7 @@ foo&#40;x&#41; &#61; x ./ sum_x</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 25, 2024 
+          © Martin Alfaro <br>Last Modified June 26, 2024 
       </span> 
   </div> 
 </footer>
@@ -3341,6 +3341,10 @@ for multiple pics in a row
 
     .hand-cursor {
         cursor: wait;
+    }
+
+    h2:hover {
+        color: rgba(0,0,0, 0.5);
     }
 </style>    
 
